--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Minimal theme
-description: Minimal is a theme for GitHub Pages.
+title: Twitter Event Analyiser
+description: This project, made for the Social Graphs course at DTU, seeks to explore the data behind the Texas Shooting. 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
