--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Twitter Event Analyiser
+title: The data behind the Church Shooting
 description: This project, made for the Social Graphs course at DTU, seeks to explore the data behind the Texas Shooting. 
 show_downloads: true
 google_analytics:
