--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: The data behind the Church Shooting
-description: This project, made for the Social Graphs course at DTU, seeks to explore the data behind the Texas Shooting. 
+description: This project, made for the Social Graphs course at DTU, seeks to explore the data behind the Texas Shooting.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
+baseurl: /Project_Page_SG
